--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,35 @@
 /*  your css code here. If applicable */
+
+.container{
+	width:500px;
+	height:200px;
+	border:5px solid black;
+	border-radius:50px;
+	background-color:rgb(211,211,211);
+	display:flex;
+	justify-content:center;
+	align-items: center;
+/* 	text-align:center; */
+}
+.green{
+	width:100px;
+	height:100px;
+	border-radius:50%;
+	background-color:green;
+	margin:5px;
+	
+}
+.yellow{
+	width:100px;
+	height:100px;
+	border-radius:50%;
+	background-color:yellow;
+    margin:5px; 
+}
+.red{
+	width:100px;
+	height:100px;
+	border-radius:50%;
+	background-color:red;
+    margin:5px;
+}
